tests/semantic/invalid/equality_mismatch.mc
bool flag = true;
int value = 1;
bool same = flag == value;
